# Dylann

./: CMakeLists.txt  main.cu  testExec.cu  testOptim.cu
cudautil/: ThreadController.cu  ThreadController.cuh  assertion.cu  assertion.cuh
dylann/: Config.cuh  DylannContext.cu  DylannContext.cuh
dylann/module/: Module.cu  Module.cuh  Sequence.cu  Sequence.cuh
dylann/ops/: cuActivation.cu  cuActivation.cuh  cuBatchnorm.cu  cuBatchnorm.cuh  cuConcat.cu  cuConcat.cuh  cuConv.cu  cuConv.cuh  cuDropout.cu  cuDropout.cuh  cuLinear.cu  cuLinear.cuh  cuPool.cu  cuPool.cuh  cuReduce.cu  cuReduce.cuh  cuTensorOpGrads.cu  cuTensorOpGrads.cuh  cuTensorOps.cu  cuTensorOps.cuh  opRegistry.cu  opRegistry.cuh
dylann/ops/research/: cuHopField.cu  cuHopField.cuh
dylann/optim/: Loss.cu  Loss.cuh  OptImpl.cu  OptImpl.cuh  Optimizers.cu  Optimizers.cuh
dylann/serial/: AutoGrad.cu  AutoGrad.cuh  GradInstructions.cu  GradInstructions.cuh  Instructions.cu  Instructions.cuh
dylann/tensor/: cuTensor.cu  cuTensor.cuh  cuTensorBase.cu  cuTensorBase.cuh  cuTensorOps.cu  cuTensorOps.cuh  shell.cu  shell.cuh
io/dataset/: AngTensorInstructions.cu  AngTensorInstructions.cuh  AugCVInstructions.cu  AugCVInstructions.cuh  Data.cu  Data.cuh  DataPipeline.cu  DataPipeline.cuh  Dataset.cu  Dataset.cuh
io/logging/: Color.cu  Color.cuh  LogUtils.cu  LogUtils.cuh
modelArchive/: Resnet34.cu
presets/: Resnet.cu  Resnet.cuh
presets/readFuncs/: BuildinReadfuncs.cu  BuildinReadfuncs.cuh
